// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> with \`digits\` prop matches with snapshot 1`] = `
<input
  className="text-input__StyledInput-sc-11wej6v-1 dZktpm"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`disabled\` prop matches with snapshot 1`] = `
<input
  className="text-input__StyledInput-sc-11wej6v-1 iDULaY"
  disabled={true}
  name="text"
/>
`;

exports[`<TextInput /> with \`error\` prop matches with snapshot 1`] = `
<input
  className="text-input__StyledInput-sc-11wej6v-1 kfptEQ"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`name\` prop matches with snapshot 1`] = `
<input
  className="text-input__StyledInput-sc-11wej6v-1 iDULaY"
  disabled={false}
  name="foobar"
/>
`;

exports[`<TextInput /> with \`tag\` prop matches with snapshot 1`] = `
<input
  className="text-input__StyledInput-sc-11wej6v-1 iDULaY"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`tiny\` prop matches with snapshot 1`] = `
<input
  className="text-input__StyledInput-sc-11wej6v-1 iXzQrK"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`valid\` prop matches with snapshot 1`] = `
<input
  className="text-input__StyledInput-sc-11wej6v-1 bfvwuD"
  disabled={false}
  name="text"
/>
`;
